test/fail/basic_syntax/invalid_tuple_subscript.lily
#[
SyntaxError: Index 3 is out of range for Tuple[Integer, String].
    from invalid_tuple_subscript.lily:6:
]#

var s: String = <[1, "2"]> [3]
